--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
             left: -50%;
             width: 200%;
             height: 200%;
-            background-image: radial-gradient(circle, #ff66cc, #993399);
-            animation: fireAnimation 1s ease-in-out infinite alternate;
+            background-image: radial-gradient(circle, #ff66cc, #ff3366, #ff0066);
+            animation: fireAnimation 0.5s ease-in-out infinite alternate;
             border-radius: 50%;
             z-index: -1;
         }
@@ -143,11 +143,11 @@
         @keyframes fireAnimation {
             0% {
                 transform: scale(1);
-                opacity: 0.8;
+                opacity: 0.7;
             }
             100% {
-                transform: scale(1.2);
-                opacity: 0;
+                transform: scale(1.4);
+                opacity: 1;
             }
         }
 
@@ -323,7 +323,7 @@
             </div>
             <div class="links">
                 <a href="https://www.facebook.com/ngleeqthai/" target="_blank">Facebook</a>
-                <a href="https://www.instagram.com/_ngleeq.thai/?hl=en" target="_blank">Instagram</a>
+                <a href="https://www.instagram.com/_ngleeqthai_/?hl=en" target="_blank">Instagram</a>
                 <a href="https://steamcommunity.com/id/ngleeqthai0212/" target="_blank">Steam</a>
                 <a href="https://specs.gg/ngleeq.thai" target="_blank">My Settings</a>
                 <a href="https://tracker.gg/valorant/profile/riot/WWWWWWWWWWWWWWW%231234/overview" target="_blank">Valorant Tracker</a>
