--- a/index.html
+++ b/index.html
@@ -130,50 +130,14 @@
 
         .fire-animation {
             position: absolute;
-            top: -50%;
-            left: -50%;
-            width: 200%;
-            height: 200%;
-            background: radial-gradient(circle, rgba(255, 102, 204, 0.5), rgba(255, 51, 102, 0.3), rgba(255, 0, 102, 0.2));
+            top: -15px;
+            left: -15px;
+            width: calc(100% + 30px);
+            height: calc(100% + 30px);
+            background: url('https://www.transparenttextures.com/patterns/fire.gif') center center / cover no-repeat;
             border-radius: 50%;
-            z-index: -1;
-            opacity: 0.8;
-            animation: fireAnimation 1.5s ease-in-out infinite alternate;
-        }
-
-        @keyframes fireAnimation {
-            0% {
-                transform: scale(1);
-                opacity: 0.6;
-            }
-            100% {
-                transform: scale(1.5);
-                opacity: 1;
-            }
-        }
-
-        .fire-layer {
-            position: absolute;
-            top: -60%;
-            left: -60%;
-            width: 220%;
-            height: 220%;
-            background: radial-gradient(circle, rgba(255, 200, 0, 0.5), rgba(255, 140, 0, 0.3), rgba(255, 69, 0, 0.2));
-            border-radius: 50%;
-            z-index: -2;
-            opacity: 0.5;
-            animation: fireLayerAnimation 2s ease-in-out infinite alternate;
-        }
-
-        @keyframes fireLayerAnimation {
-            0% {
-                transform: scale(1);
-                opacity: 0.4;
-            }
-            100% {
-                transform: scale(1.8);
-                opacity: 0.9;
-            }
+            z-index: 1;
+            pointer-events: none;
         }
 
         .intro {
@@ -341,7 +305,6 @@
             <div class="profile-picture">
                 <img src="profile_picture.jpg" alt="Profile Picture">
                 <div class="fire-animation"></div>
-                <div class="fire-layer"></div>
             </div>
             <div class="intro">
                 <h2>Welcome to My Profile</h2>
@@ -393,7 +356,7 @@
                     ellipsis.textContent = '...';
                     count = 0;
                 }
-            }, 166);
+            }, 500);
         });
     </script>
 </body>
