--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
             font-family: 'Brams';
             margin: 0;
             padding: 0;
-            overflow-y: auto;
-            overflow-x: hidden;
+            overflow-y: auto; /* Enable vertical scroll */
+            overflow-x: hidden; /* Prevent horizontal scroll */
             color: #fff;
-            position: relative;
-            min-height: 100vh;
-            background-color: #1f1f1f;
+            position: relative; /* For layering content over the video */
+            min-height: 100vh; /* Ensure body takes at least full viewport height */
+            background-color: #1f1f1f; /* Set a dark background color */
         }
 
         #loading-screen {
@@ -45,13 +45,13 @@
             left: 0;
             width: 100%;
             height: 100%;
-            object-fit: cover;
-            z-index: -1;
-            pointer-events: none;
+            object-fit: cover; /* Crop and fit the video */
+            z-index: -1; /* Ensure the video is in the background */
+            pointer-events: none; /* Make the video non-interactive */
         }
 
         #loading-video, #main-video {
-            display: none;
+            display: none; /* Hide loading video and main video initially */
         }
 
         #loading-screen h1 {
@@ -60,29 +60,29 @@
         }
 
         #main-content {
-            display: none;
-            padding-bottom: 50px;
+            display: none; /* Hide the main content initially */
+            padding-bottom: 50px; /* Add space for the footer */
         }
 
         header {
             background-color: rgba(0, 0, 0, 0.7);
             padding: 20px;
-            animation: glowHeader 2s ease-in-out infinite alternate;
-            position: fixed;
+            animation: glowHeader 2s ease-in-out infinite alternate; /* Add glow animation */
+            position: fixed; /* Fix header position */
             width: 100%;
             top: 0;
-            z-index: 1000;
-            display: flex;
-            justify-content: center;
-            align-items: center;
+            z-index: 1000; /* Ensure it stays above other content */
+            display: flex; /* Use flexbox for centering */
+            justify-content: center; /* Center horizontally */
+            align-items: center; /* Center vertically */
         }
 
         @keyframes glowHeader {
             0% {
-                box-shadow: 0 0 10px rgba(204, 94, 255, 0);
+                box-shadow: 0 0 10px rgba(204, 94, 255, 0); /* No glow */
             }
             100% {
-                box-shadow: 0 0 20px rgba(204, 94, 255, 0.8);
+                box-shadow: 0 0 20px rgba(204, 94, 255, 0.8); /* Glow effect */
             }
         }
 
@@ -92,8 +92,8 @@
             text-transform: normal;
             letter-spacing: 0px;
             color: #fff;
-            text-align: center;
-            width: 100%;
+            text-align: center; /* Center align header text */
+            width: 100%; /* Ensure text takes full width */
         }
 
         .content {
@@ -102,46 +102,63 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            margin-top: 80px;
-            max-width: 1000px;
+            margin-top: 80px; /* Add margin to avoid content being hidden behind the fixed header */
+            max-width: 1000px; /* Limit content width */
             margin-left: auto;
             margin-right: auto;
-            width: 90%;
+            width: 90%; /* Adjust width as needed */
         }
 
         .profile-picture {
             position: relative;
-            max-width: 12vw;
+            max-width: 12vw; /* Responsive size */
             margin-top: 4px;
             margin-bottom: 4px;
-            border-radius: 50%;
-            overflow: hidden;
+            border-radius: 50%; /* Circular shape */
+            overflow: hidden; /* Ensure image does not overflow */
             display: flex;
             justify-content: center;
             align-items: center;
-            box-shadow: 0 0 20px rgba(204, 94, 255, 0.8);
-            border: 4px solid rgba(204, 94, 255, 0.8);
+            box-shadow: 0 0 20px rgba(204, 94, 255, 0.8); /* Glow effect */
+            border: 4px solid rgba(204, 94, 255, 0.8); /* Border color */
         }
 
         .profile-picture img {
             width: 100%;
-            border-radius: 50%;
+            border-radius: 50%; /* Circular shape */
         }
 
         .fire-animation {
             position: absolute;
-            top: -15px;
-            left: -15px;
-            width: calc(100% + 30px);
-            height: calc(100% + 30px);
-            background: url('https://www.transparenttextures.com/patterns/fire.gif') center center / cover no-repeat;
-            border-radius: 50%;
-            z-index: 1;
-            pointer-events: none;
+            top: -50%;
+            left: -50%;
+            width: 200%;
+            height: 200%;
+            background: transparent; /* Transparent background */
+            z-index: -1; /* Behind the profile picture */
+            pointer-events: none; /* Make sure it doesn't interfere with clicks */
+            animation: fireAnimation 1s infinite ease-in-out alternate-reverse; /* Fire animation */
+            border-radius: 50%; /* Ensure it's circular */
+            box-shadow: 0 0 50px 20px #ff4500, inset 0 0 50px 20px #ff4500; /* Fire-like glow */
+        }
+
+        @keyframes fireAnimation {
+            0% {
+                transform: scale(1) translateY(-10%);
+                opacity: 0.8;
+            }
+            50% {
+                transform: scale(1.05) translateY(-15%);
+                opacity: 0.9;
+            }
+            100% {
+                transform: scale(1) translateY(-10%);
+                opacity: 0.8;
+            }
         }
 
         .intro {
-            max-width: 90vw;
+            max-width: 90vw; /* Responsive size */
             padding: 20px;
             background-color: transparent;
             margin-bottom: 20px;
@@ -154,14 +171,14 @@
         }
 
         .intro p {
-            font-size: 4em;
+            font-size: 4em; /*Title size*/
             line-height: 1;
             margin-top: 5px;
             margin-bottom: 0px;
         }
 
         .links {
-            margin-top: 0px;
+            margin-top: 0px; /* Adjusted margin to bring links closer to social media text */
             display: flex;
             justify-content: center;
             align-items: center;
@@ -170,11 +187,11 @@
 
         .links a {
             margin: 8px;
-            padding: 5px 10px;
+            padding: 5px 10px; /* Responsive padding */
             background: linear-gradient(135deg, #774c96, #59198e);
             color: #fff;
             text-decoration: none;
-            font-size: 3em;
+            font-size: 3em; /* Responsive font size */
             border-radius: 3px;
             border: 2px solid transparent;
             position: relative;
@@ -216,10 +233,10 @@
             padding: 10px;
             text-align: center;
             width: 100%;
-            position: fixed;
+            position: fixed; /* Stick footer to the bottom */
             bottom: 0;
             left: 0;
-            z-index: 1000;
+            z-index: 1000; /* Ensure it stays above other content */
         }
 
         footer p {
@@ -233,16 +250,17 @@
 
         @keyframes slideIn {
             0% {
-                right: -100%;
+                right: -100%; /* Start off-screen to the right */
                 opacity: 0;
             }
             100% {
-                right: 0;
+                right: 0; /* Slide in to the right */
                 opacity: 1;
             }
         }
 
         @media (max-width: 1200px) {
+            /* Larger devices adjustments */
             .content {
                 width: 90%;
                 max-width: 1000px;
@@ -250,36 +268,37 @@
         }
 
         @media (max-width: 767px) {
+            /* Smaller devices adjustments */
             .content {
                 width: 90%;
                 max-width: 90%;
             }
 
             .profile-picture {
-                max-width: 40vw;
+                max-width: 40vw; /* Increase profile picture size on smaller screens */
             }
 
             .intro p {
-                font-size: 2em;
+                font-size: 2em; /* Decrease font size */
             }
 
             .links {
-                margin-top: 5px;
+                margin-top: 5px; /* Reduce margin top for links */
             }
 
             .links a {
-                font-size: 1.5em;
-                padding: 10px 20px;
+                font-size: 1.5em; /* Decrease font size */
+                padding: 10px 20px; /* Adjust padding */
             }
 
             header h1 {
-                text-align: center;
-                width: auto;
+                text-align: center; /* Center align header text */
+                width: auto; /* Reset width to auto */
             }
 
             footer {
-                position: static;
-                margin-top: 20px;
+                position: static; /* Ensure footer is static on smaller screens */
+                margin-top: 20px; /* Add margin to separate from content */
             }
         }
     </style>
@@ -292,28 +311,27 @@
         <h1>Loading<span id="ellipsis"></span></h1>
     </div>
     <video id="video-background" autoplay muted loop playsinline>
-        <source src="background.mp4" type="video/mp4">
+        <source src="Main.mp4" type="video/mp4">
     </video>
     <video id="main-video" autoplay muted loop playsinline>
-        <source src="main.mp4" type="video/mp4">
+        <source src="Main.mp4" type="video/mp4">
     </video>
     <div id="main-content">
         <header>
-            <h1>My Profile</h1>
+            <h1>Ah, skill issue I'm afraid.</h1>
         </header>
         <div class="content">
             <div class="profile-picture">
-                <img src="profile_picture.jpg" alt="Profile Picture">
+                <img src="449678496_1016121393551164_244338954380778760_n.jpg" alt="Profile Picture">
                 <div class="fire-animation"></div>
-            </div>
+            </div>            
             <div class="intro">
-                <h2>Welcome to My Profile</h2>
-                <p>Here are my links:</p>
+                <h2>ngleeqthai</h2>
+                <p>social media:</p>
             </div>
             <div class="links">
-                <a href="https://discord.gg/XH5Hy5fMZn" target="_blank">Discord</a>
-                <a href="https://twitter.com/ngleeqthai_" target="_blank">Twitter</a>
-                <a href="https://www.instagram.com/ngleeqthai_/?hl=en" target="_blank">Instagram</a>
+                <a href="https://www.facebook.com/ngleeqthai/" target="_blank">Facebook</a>
+                <a href="https://www.instagram.com/_ngleeq.thai/?hl=en" target="_blank">Instagram</a>
                 <a href="https://steamcommunity.com/id/ngleeqthai0212/" target="_blank">Steam</a>
                 <a href="https://specs.gg/ngleeq.thai" target="_blank">My Settings</a>
                 <a href="https://tracker.gg/valorant/profile/riot/WWWWWWWWWWWWWWW%231234/overview" target="_blank">Valorant Tracker</a>
@@ -326,22 +344,26 @@
 
     <script>
         document.addEventListener("DOMContentLoaded", function() {
+            // Delay before starting loading video
             setTimeout(function() {
+                // Show and start loading video from the 3rd second instantly
                 const loadingVideo = document.getElementById("loading-video");
-                loadingVideo.currentTime = 3;
-                loadingVideo.style.display = "block";
-                loadingVideo.play();
-            }, 3000);
+                loadingVideo.currentTime = 3; // Start from the 3rd second
+                loadingVideo.style.display = "block"; // Show loading video
+                loadingVideo.play(); // Start playing loading video
+            }, 3000); // 3000 milliseconds delay before showing loading video
 
+            // Hide the loading screen and show the video background and main content after 6 seconds from showing loading video
             setTimeout(function() {
                 document.getElementById("loading-screen").style.display = "none";
-                document.getElementById("loading-video").style.display = "none";
-                document.getElementById("video-background").style.filter = "none";
-                document.getElementById("main-video").style.display = "block";
-                document.getElementById("main-video").play();
+                document.getElementById("loading-video").style.display = "none"; // Hide loading video
+                document.getElementById("video-background").style.filter = "none"; // Remove blur effect
+                document.getElementById("main-video").style.display = "block"; // Display main video
+                document.getElementById("main-video").play(); // Play main video
                 document.getElementById("main-content").style.display = "block";
-            }, 9000);
+            }, 9000); // 9000 milliseconds = 3 seconds delay + 6 seconds
 
+            // Ellipsis animation (now faster, every 166 milliseconds)
             const ellipsis = document.getElementById('ellipsis');
             let count = 0;
             setInterval(() => {
@@ -356,7 +378,7 @@
                     ellipsis.textContent = '...';
                     count = 0;
                 }
-            }, 500);
+            }, 166); // Change every 0.166 seconds (166 milliseconds)
         });
     </script>
 </body>
