--- a/index.html
+++ b/index.html
@@ -110,41 +110,46 @@
         }
 
         .profile-picture {
-    position: relative;
-    max-width: 12vw; /* Responsive size */
-    margin-top: 4px;
-    margin-bottom: 4px;
-    border-radius: 50%; /* Circular shape */
-    overflow: hidden; /* Ensure image does not overflow */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border: none; /* Remove border */
-}
+            position: relative;
+            max-width: 12vw; /* Responsive size */
+            margin-top: 4px;
+            margin-bottom: 4px;
+            border-radius: 50%; /* Circular shape */
+            overflow: hidden; /* Ensure image does not overflow */
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            box-shadow: 0 0 20px rgba(204, 94, 255, 0.8); /* Glow effect */
+            border: 4px solid rgba(204, 94, 255, 0.8); /* Border color */
+        }
 
-.border-animation {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    border-radius: 50%; /* Circular shape */
-    box-shadow: 0 0 50px rgba(204, 94, 255, 0.8); /* Glow effect */
-    animation: borderAnimation 10s linear infinite; /* Gradient animation */
-}
+        .profile-picture img {
+            width: 100%;
+            border-radius: 50%; /* Circular shape */
+        }
 
-@keyframes borderAnimation {
-    0% {
-        box-shadow: 0 0 50px rgba(255, 102, 204, 0.8), 0 0 20px rgba(153, 51, 153, 0.8); /* Initial shadow */
-    }
-    50% {
-        box-shadow: 0 0 70px rgba(255, 102, 204, 0.8), 0 0 30px rgba(153, 51, 153, 0.8); /* Middle shadow */
-    }
-    100% {
-        box-shadow: 0 0 50px rgba(255, 102, 204, 0.8), 0 0 20px rgba(153, 51, 153, 0.8); /* Final shadow */
-    }
-}
+        .fire-animation {
+            position: absolute;
+            top: -50%;
+            left: -50%;
+            width: 200%;
+            height: 200%;
+            background-image: radial-gradient(circle, #ff66cc, #993399); /* Pink/purple gradient */
+            animation: fireAnimation 2s ease-in-out infinite alternate;
+            border-radius: 50%; /* Ensure it's circular */
+            z-index: -1; /* Behind the profile picture */
+        }
 
+        @keyframes fireAnimation {
+            0% {
+                transform: scale(1);
+                opacity: 0.8;
+            }
+            100% {
+                transform: scale(1.1);
+                opacity: 0;
+            }
+        }
 
         .intro {
             max-width: 90vw; /* Responsive size */
