--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
         }
 
         .intro p {
-            font-size: 4em; /* Title size */
+            font-size: 4em; /*Title size*/
             line-height: 1;
             margin-top: 5px;
             margin-bottom: 0px;
@@ -317,7 +317,7 @@
         <div class="content">
             <div class="profile-picture">
                 <img src="449678496_1016121393551164_244338954380778760_n.jpg" alt="Profile Picture">
-                <div class="border-animation"></div>
+                <div class="fire-animation"></div>
             </div>            
             <div class="intro">
                 <h2>ngleeqthai</h2>
@@ -376,4 +376,4 @@
         });
     </script>
 </body>
-</html>
+</html> 
