--- a/index.html
+++ b/index.html
@@ -111,21 +111,52 @@
 
         .profile-picture {
             position: relative;
-            max-width: 12vw; /* Responsive size */
-            margin-top: 4px;
-            margin-bottom: 4px;
+            width: 12vw; /* Responsive size */
+            height: 12vw; /* Responsive size */
+            margin: 4px;
             border-radius: 50%; /* Circular shape */
             overflow: hidden; /* Ensure image does not overflow */
             display: flex;
             justify-content: center;
             align-items: center;
-            box-shadow: 0 0 20px rgba(204, 94, 255, 0.8); /* Glow effect */
-            border: 4px solid rgba(204, 94, 255, 0.8); /* Border color */
+            transition: transform 0.3s ease-in-out; /* Smooth scaling effect on hover */
         }
 
         .profile-picture img {
             width: 100%;
+            height: 100%;
             border-radius: 50%; /* Circular shape */
+            transition: transform 0.3s ease-in-out; /* Smooth scaling effect on hover */
+        }
+
+        .profile-picture::before {
+            content: '';
+            position: absolute;
+            top: -2px;
+            left: -2px;
+            right: -2px;
+            bottom: -2px;
+            z-index: -1;
+            background: linear-gradient(45deg, #ff66cc, #993399, #ff66cc, #993399);
+            border-radius: 50%;
+            animation: borderAnimation 2s linear infinite;
+        }
+
+        @keyframes borderAnimation {
+            0% {
+                transform: rotate(0deg);
+            }
+            100% {
+                transform: rotate(360deg);
+            }
+        }
+
+        .profile-picture:hover {
+            transform: scale(1.1); /* Scale up the profile picture on hover */
+        }
+
+        .profile-picture:hover img {
+            transform: scale(1.05); /* Scale up the image slightly on hover */
         }
 
         .fire-animation {
@@ -317,7 +348,6 @@
         <div class="content">
             <div class="profile-picture">
                 <img src="449678496_1016121393551164_244338954380778760_n.jpg" alt="Profile Picture">
-                <div class="fire-animation"></div>
             </div>            
             <div class="intro">
                 <h2>ngleeqthai</h2>
@@ -355,7 +385,7 @@
                 document.getElementById("main-video").style.display = "block"; // Display main video
                 document.getElementById("main-video").play(); // Play main video
                 document.getElementById("main-content").style.display = "block";
-            }, 9000); // 9000 milliseconds = 3 seconds delay + 6 seconds
+            }, 8000); // 9000 milliseconds = 3 seconds delay + 6 seconds
 
             // Ellipsis animation (now faster, every 166 milliseconds)
             const ellipsis = document.getElementById('ellipsis');
@@ -376,4 +406,5 @@
         });
     </script>
 </body>
-</html> 
+</html>
+
