--- a/index.html
+++ b/index.html
@@ -18,12 +18,100 @@
             font-family: 'Brams';
             margin: 0;
             padding: 0;
-            overflow-y: auto; /* Enable vertical scroll */
-            overflow-x: hidden; /* Prevent horizontal scroll */
-            color: #fff;
-            position: relative; /* For layering content over the video */
-            min-height: 100vh; /* Ensure body takes at least full viewport height */
+            overflow: hidden; /* Prevent scroll */
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
             background-color: #1f1f1f; /* Set a dark background color */
+        }
+
+        .profile-picture-container {
+            position: relative;
+            width: 200px;
+            height: 200px;
+        }
+
+        .circle {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            filter: url(#wavy) blur(1px);
+        }
+
+        .circle:before, .circle:after {
+            content: "";
+            position: absolute;
+            top: 15px;
+            left: 15px;
+            right: 15px;
+            bottom: 15px;
+            border: 10px solid #FF69B4; /* Pink color */
+            border-radius: 50%;
+            box-shadow: 0 0 50px #FF69B4,
+                        inset 0 0 50px #FF69B4;
+            -webkit-box-reflect: below 10px linear-gradient(transparent, transparent, #0002);
+        }
+
+        .circle:before {
+            animation: animate 5s linear infinite;
+        }
+
+        .circle:after {
+            box-shadow: 0 0 50px #FF69B4,
+                        inset 0 0 50px #FF69B4;
+        }
+
+        .circle:nth-child(2):before {
+            animation-delay: -2.5s;
+        }
+
+        @keyframes animate {
+            0% {
+                box-shadow: 0 0 50px #FF69B4,
+                            inset 0 0 50px #FF69B4;
+                filter: hue-rotate(0deg);
+            }
+            20% {
+                box-shadow: 0 0 40px #FF69B4,
+                            inset 0 0 60px #FF69B4;
+            }
+            40% {
+                box-shadow: 0 0 40px #FF69B4,
+                            inset 0 0 80px #FF69B4;
+            }
+            60% {
+                box-shadow: 0 0 80px #FF69B4,
+                            inset 0 0 80px #FF69B4;
+            }
+            80% {
+                box-shadow: 0 0 100px #FF69B4,
+                            inset 0 0 100px #FF69B4;
+            }
+            100% {
+                box-shadow: 0 0 50px #FF69B4,
+                            inset 0 0 50px #FF69B4;
+                filter: hue-rotate(360deg);
+            }
+        }
+
+        .profile-picture {
+            width: 100%;
+            height: 100%;
+            border-radius: 50%; /* Circular shape */
+            overflow: hidden; /* Ensure image does not overflow */
+        }
+
+        .profile-picture img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            border-radius: 50%; /* Circular shape */
+        }
+
+        svg {
+            width: 0;
+            height: 0;
         }
 
         #loading-screen {
@@ -109,79 +197,6 @@
             width: 90%; /* Adjust width as needed */
         }
 
-        .profile-picture {
-            position: relative;
-            width: 12vw; /* Responsive size */
-            height: 12vw; /* Responsive size */
-            margin: 4px;
-            border-radius: 50%; /* Circular shape */
-            overflow: hidden; /* Ensure image does not overflow */
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            transition: transform 0.3s ease-in-out; /* Smooth scaling effect on hover */
-        }
-
-        .profile-picture img {
-            width: 100%;
-            height: 100%;
-            border-radius: 50%; /* Circular shape */
-            transition: transform 0.3s ease-in-out; /* Smooth scaling effect on hover */
-        }
-
-        .profile-picture::before {
-            content: '';
-            position: absolute;
-            top: -2px;
-            left: -2px;
-            right: -2px;
-            bottom: -2px;
-            z-index: -1;
-            background: linear-gradient(45deg, #ff66cc, #993399, #ff66cc, #993399);
-            border-radius: 50%;
-            animation: borderAnimation 2s linear infinite;
-        }
-
-        @keyframes borderAnimation {
-            0% {
-                transform: rotate(0deg);
-            }
-            100% {
-                transform: rotate(360deg);
-            }
-        }
-
-        .profile-picture:hover {
-            transform: scale(1.1); /* Scale up the profile picture on hover */
-        }
-
-        .profile-picture:hover img {
-            transform: scale(1.05); /* Scale up the image slightly on hover */
-        }
-
-        .fire-animation {
-            position: absolute;
-            top: -50%;
-            left: -50%;
-            width: 200%;
-            height: 200%;
-            background-image: radial-gradient(circle, #ff66cc, #993399); /* Pink/purple gradient */
-            animation: fireAnimation 2s ease-in-out infinite alternate;
-            border-radius: 50%; /* Ensure it's circular */
-            z-index: -1; /* Behind the profile picture */
-        }
-
-        @keyframes fireAnimation {
-            0% {
-                transform: scale(1);
-                opacity: 0.8;
-            }
-            100% {
-                transform: scale(1.1);
-                opacity: 0;
-            }
-        }
-
         .intro {
             max-width: 90vw; /* Responsive size */
             padding: 20px;
@@ -196,7 +211,7 @@
         }
 
         .intro p {
-            font-size: 4em; /*Title size*/
+            font-size: 4em; /* Title size */
             line-height: 1;
             margin-top: 5px;
             margin-bottom: 0px;
@@ -268,143 +283,105 @@
             margin: 0;
         }
 
-        .valorant-logo {
-            width: 100px;
-            margin-top: 20px;
-        }
-
         @keyframes slideIn {
             0% {
                 right: -100%; /* Start off-screen to the right */
                 opacity: 0;
             }
             100% {
-                right: 0; /* Slide in to the right */
+                right: 0; /* Slide in to the center */
                 opacity: 1;
             }
         }
 
-        @media (max-width: 1200px) {
-            /* Larger devices adjustments */
-            .content {
-                width: 90%;
-                max-width: 1000px;
-            }
-        }
-
-        @media (max-width: 767px) {
-            /* Smaller devices adjustments */
-            .content {
-                width: 90%;
-                max-width: 90%;
-            }
-
-            .profile-picture {
-                max-width: 40vw; /* Increase profile picture size on smaller screens */
-            }
-
+        @media only screen and (max-width: 600px) {
             .intro p {
-                font-size: 2em; /* Decrease font size */
-            }
-
-            .links {
-                margin-top: 5px; /* Reduce margin top for links */
+                font-size: 2em; /* Adjust font size for smaller screens */
             }
 
             .links a {
-                font-size: 1.5em; /* Decrease font size */
-                padding: 10px 20px; /* Adjust padding */
+                font-size: 2.5em; /* Adjust font size for smaller screens */
+            }
+        }
+
+        @media only screen and (max-width: 400px) {
+            .intro h2 {
+                font-size: 2.5em; /* Adjust font size for smaller screens */
             }
 
-            header h1 {
-                text-align: center; /* Center align header text */
-                width: auto; /* Reset width to auto */
+            .intro p {
+                font-size: 1.5em; /* Further adjust font size for smaller screens */
             }
 
-            footer {
-                position: static; /* Ensure footer is static on smaller screens */
-                margin-top: 20px; /* Add margin to separate from content */
+            .links a {
+                font-size: 2em; /* Further adjust font size for smaller screens */
             }
         }
     </style>
 </head>
 <body>
-    <div id="loading-screen">
-        <video id="loading-video" autoplay muted loop playsinline>
-            <source src="Loading.mp4" type="video/mp4">
-        </video>
-        <h1>Loading<span id="ellipsis"></span></h1>
+    <div class="profile-picture-container">
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="profile-picture">
+            <img src="your-profile-picture.jpg" alt="Profile Picture">
+        </div>
     </div>
-    <video id="video-background" autoplay muted loop playsinline>
-        <source src="Main.mp4" type="video/mp4">
+
+    <svg>
+        <filter id="wavy">
+            <feTurbulence x="0" y="0" baseFrequency="0.009" numOctaves="5" seed="2">
+                <animate attributeName="baseFrequency" dur="60s" values="0.02;0.005;0.02" repeatCount="indefinite"></animate>
+            </feTurbulence>
+            <feDisplacementMap in="SourceGraphic" scale="30"></feDisplacementMap>
+        </filter>
+    </svg>
+
+    <div id="loading-screen">
+        <h1>Loading...</h1>
+        <video id="loading-video" autoplay loop muted>
+            <source src="loading.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+    </div>
+
+    <video id="video-background" autoplay loop muted>
+        <source src="video.mp4" type="video/mp4">
+        Your browser does not support the video tag.
     </video>
-    <video id="main-video" autoplay muted loop playsinline>
-        <source src="Main.mp4" type="video/mp4">
+
+    <video id="main-video" autoplay loop muted>
+        <source src="main.mp4" type="video/mp4">
+        Your browser does not support the video tag.
     </video>
+
+    <header>
+        <h1>Welcome to My Profile</h1>
+    </header>
+
     <div id="main-content">
-        <header>
-            <h1>Ah, skill issue I'm afraid.</h1>
-        </header>
         <div class="content">
-            <div class="profile-picture">
-                <img src="449678496_1016121393551164_244338954380778760_n.jpg" alt="Profile Picture">
-            </div>            
             <div class="intro">
-                <h2>ngleeqthai</h2>
-                <p>social media:</p>
+                <h2>Hello, I'm Your Name</h2>
+                <p>Welcome to my profile. I'm passionate about...</p>
             </div>
+
             <div class="links">
-                <a href="https://www.facebook.com/ngleeqthai/" target="_blank">Facebook</a>
-                <a href="https://www.instagram.com/_ngleeq.thai/?hl=en" target="_blank">Instagram</a>
-                <a href="https://steamcommunity.com/id/ngleeqthai0212/" target="_blank">Steam</a>
-                <a href="https://specs.gg/ngleeq.thai" target="_blank">My Settings</a>
-                <a href="https://tracker.gg/valorant/profile/riot/WWWWWWWWWWWWWWW%231234/overview" target="_blank">Valorant Tracker</a>
+                <a href="#">Link 1</a>
+                <a href="#">Link 2</a>
+                <a href="#">Link 3</a>
+                <a href="#">Link 4</a>
+                <a href="#">Link 5</a>
             </div>
         </div>
-        <footer>
-            <p>&copy; WWWWWWWWWWWWWWW</p>
-        </footer>
     </div>
 
+    <footer>
+        <p>&copy; 2024 Your Name. All rights reserved.</p>
+    </footer>
+
     <script>
-        document.addEventListener("DOMContentLoaded", function() {
-            // Delay before starting loading video
-            setTimeout(function() {
-                // Show and start loading video from the 3rd second instantly
-                const loadingVideo = document.getElementById("loading-video");
-                loadingVideo.currentTime = 3; // Start from the 3rd second
-                loadingVideo.style.display = "block"; // Show loading video
-                loadingVideo.play(); // Start playing loading video
-            }, 3000); // 3000 milliseconds delay before showing loading video
-
-            // Hide the loading screen and show the video background and main content after 6 seconds from showing loading video
-            setTimeout(function() {
-                document.getElementById("loading-screen").style.display = "none";
-                document.getElementById("loading-video").style.display = "none"; // Hide loading video
-                document.getElementById("video-background").style.filter = "none"; // Remove blur effect
-                document.getElementById("main-video").style.display = "block"; // Display main video
-                document.getElementById("main-video").play(); // Play main video
-                document.getElementById("main-content").style.display = "block";
-            }, 8000); // 9000 milliseconds = 3 seconds delay + 6 seconds
-
-            // Ellipsis animation (now faster, every 166 milliseconds)
-            const ellipsis = document.getElementById('ellipsis');
-            let count = 0;
-            setInterval(() => {
-                count++;
-                if (count === 1) {
-                    ellipsis.textContent = '';
-                } else if (count === 2) {
-                    ellipsis.textContent = '.';
-                } else if (count === 3) {
-                    ellipsis.textContent = '..';
-                } else if (count === 4) {
-                    ellipsis.textContent = '...';
-                    count = 0;
-                }
-            }, 166); // Change every 0.166 seconds (166 milliseconds)
-        });
+        // JavaScript code can be added here if needed
     </script>
 </body>
 </html>
-
