--- a/index.html
+++ b/index.html
@@ -115,8 +115,6 @@
             border-radius: 50%; /* Circular shape */
             overflow: hidden; /* Ensure image does not overflow */
             position: relative; /* Position relative for absolute border */
-            box-shadow: 0 0 20px rgba(204, 94, 255, 0.8); /* Glow effect (pink/purple glow) */
-            border: 4px solid rgba(204, 94, 255, 0.8); /* Pink/purple border */
             display: flex;
             justify-content: center;
             align-items: center;
@@ -125,6 +123,38 @@
         .profile-picture img {
             width: 100%;
             border-radius: 50%; /* Circular shape */
+        }
+
+        .profile-picture:before, .profile-picture:after {
+            content: "";
+            position: absolute;
+            top: -10px;
+            left: -10px;
+            width: calc(100% + 20px);
+            height: calc(100% + 20px);
+            border-radius: 50%;
+            box-shadow: 0 0 20px rgba(255, 105, 180, 0.8), 
+                        0 0 30px rgba(255, 105, 180, 0.6), 
+                        0 0 40px rgba(255, 105, 180, 0.4), 
+                        0 0 50px rgba(255, 105, 180, 0.2);
+            animation: wavyFire 2s linear infinite;
+        }
+
+        .profile-picture:after {
+            top: -20px;
+            left: -20px;
+            width: calc(100% + 40px);
+            height: calc(100% + 40px);
+            box-shadow: 0 0 40px rgba(255, 20, 147, 0.8), 
+                        0 0 50px rgba(255, 20, 147, 0.6), 
+                        0 0 60px rgba(255, 20, 147, 0.4), 
+                        0 0 70px rgba(255, 20, 147, 0.2);
+            animation: wavyFire 3s linear infinite;
+        }
+
+        @keyframes wavyFire {
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
         }
 
         .intro {
@@ -352,4 +382,3 @@
     </script>
 </body>
 </html>
-
