--- a/index.html
+++ b/index.html
@@ -108,16 +108,19 @@
             width: 90%;
         }
 
-        .profile-picture {
-            width: 200px;
-            height: 200px;
+        .profile-picture-container {
             position: relative;
-            border-radius: 50%;
-            overflow: hidden;
             display: flex;
             justify-content: center;
             align-items: center;
-            background: radial-gradient(circle, rgba(255,20,147,1) 0%, rgba(255,20,147,0) 70%);
+        }
+
+        .profile-picture {
+            width: 200px;
+            height: 200px;
+            border-radius: 50%;
+            overflow: hidden;
+            z-index: 1;
         }
 
         .profile-picture img {
@@ -127,17 +130,17 @@
 
         .profile-frame {
             position: absolute;
-            top: -10px;
-            left: -10px;
-            width: 100%;
-            height: 100%;
+            top: -20px;
+            left: -20px;
+            width: 240px;
+            height: 240px;
             border-radius: 50%;
             box-shadow: 0 0 20px rgba(255, 20, 147, 0.8), 
                         0 0 30px rgba(255, 20, 147, 0.6), 
                         0 0 40px rgba(255, 20, 147, 0.4), 
                         0 0 50px rgba(255, 20, 147, 0.2);
             animation: wavyFire 2s linear infinite;
-            z-index: -1;
+            z-index: 0;
         }
 
         @keyframes wavyFire {
@@ -311,9 +314,11 @@
             <h1>Ah, skill issue I'm afraid.</h1>
         </header>
         <div class="content">
-            <div class="profile-picture">
-                <img src="448969993_1005954630665614_4173930242296266244_n.jpg" alt="Profile Picture">
+            <div class="profile-picture-container">
                 <div class="profile-frame"></div>
+                <div class="profile-picture">
+                    <img src="448969993_1005954630665614_4173930242296266244_n.jpg" alt="Profile Picture">
+                </div>
             </div>            
             <div class="intro">
                 <h2>ngleeqthai</h2>
